--- a/src/main/resources/com/example/sistema_gerenciamentofx/manage-stock2-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/manage-stock2-view.fxml
@@ -59,14 +59,19 @@
                   <Font size="16.0" />
                </font>
             </Button>
-            <Button fx:id="bttAdd" mnemonicParsing="false" onAction="#login" prefHeight="37.0" prefWidth="178.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="Add new product">
+            <Button fx:id="bttViewServices" mnemonicParsing="false" onAction="#login" prefHeight="37.0" prefWidth="178.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="View services">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <Button fx:id="bttView" layoutX="113.0" layoutY="28.0" mnemonicParsing="false" onAction="#login" prefHeight="31.0" prefWidth="178.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="View products">
                <font>
                   <Font size="16.0" />
                </font>
             </Button>
          </children>
       </HBox>
-      <Pane fx:id="pnlAddProduct" layoutX="2.0" layoutY="141.0" prefHeight="413.0" prefWidth="793.0" />
+      <Pane fx:id="pnlViewServices" layoutX="2.0" layoutY="141.0" prefHeight="413.0" prefWidth="793.0" />
       <Pane fx:id="pnlEditProduct" layoutX="1.0" layoutY="142.0" prefHeight="413.0" prefWidth="793.0" />
    </children>
 </Pane>
