--- a/src/main/resources/com/example/sistema_gerenciamentofx/actual-order-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/actual-order-view.fxml
@@ -49,11 +49,11 @@
             <String fx:value="shadow" />
          </styleClass>
       </Pane>
-      <Pane layoutX="19.0" layoutY="67.0" prefHeight="378.0" prefWidth="521.0">
+      <Pane fx:id="pnlInfosOrder" layoutX="19.0" layoutY="67.0" prefHeight="378.0" prefWidth="521.0">
          <children>
             <ScrollPane hbarPolicy="ALWAYS" layoutY="205.0" prefHeight="165.0" prefWidth="521.0" stylesheets="@css/styles.css" vbarPolicy="NEVER">
                <content>
-                  <HBox prefHeight="150.0" prefWidth="521.0" />
+                  <HBox fx:id="pnlItens" prefHeight="150.0" prefWidth="521.0" />
                </content>
             </ScrollPane>
             <Label layoutX="14.0" layoutY="170.0" prefHeight="39.0" prefWidth="160.0" text="Parts List" textFill="#47077f">
