--- a/src/main/resources/com/example/sistema_gerenciamentofx/new-order-service-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/new-order-service-view.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -9,7 +8,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -39,11 +40,11 @@
       </Label>
       <ScrollPane hbarPolicy="NEVER" layoutX="47.0" layoutY="166.0" prefHeight="290.0" prefWidth="400.0" stylesheets="@css/styles.css">
          <content>
-            <VBox fx:id="pnItems" prefHeight="298.0" prefWidth="395.0" spacing="5.0" style="-fx-background-color: #fffafa;">
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-            </VBox>
+            <GridPane fx:id="grid" prefHeight="0.0" prefWidth="0.0" style="-fx-background-color: #fffafa;">
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" />
+               </rowConstraints>
+            </GridPane>
          </content>
       </ScrollPane>
       <Pane layoutX="456.0" layoutY="148.0" prefHeight="297.0" prefWidth="329.0">
@@ -53,7 +54,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="searchClient" layoutX="49.0" layoutY="35.0" prefHeight="27.0" prefWidth="116.0" promptText="type a CPF client" style="-fx-border-color: #47077F; -fx-background-color: #fffafa; -fx-border-radius: 20;" styleClass="text-input" />
+            <TextField fx:id="searchClient" layoutX="49.0" layoutY="35.0" onKeyTyped="#searchClients" prefHeight="27.0" prefWidth="116.0" promptText="type a CPF client" style="-fx-border-color: #47077F; -fx-background-color: #fffafa; -fx-border-radius: 20;" styleClass="text-input" />
             <Button fx:id="searchBtn" layoutX="172.0" layoutY="33.0" mnemonicParsing="false" onAction="#searchClient" prefHeight="28.0" prefWidth="41.0" style="-fx-background-color: #47077F; -fx-background-radius: 10;" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="OPEN_HAND" />
