🪐 update: Melhoria da dinamica do programa, e correção de bugs

--- a/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -21,6 +23,30 @@
       <Pane fx:id="pnlAddClient" layoutX="2.0" layoutY="170.0" prefHeight="389.0" prefWidth="793.0" />
       <Pane fx:id="pnlView" layoutX="1.0" layoutY="165.0" prefHeight="389.0" prefWidth="793.0">
          <children>
+            <Label layoutX="78.0" layoutY="30.0" text="Nome Cliente" textFill="#47077f">
+               <font>
+                  <Font name="Segoe UI Historic" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="257.0" layoutY="30.0" text="Adress" textFill="#47077f" />
+            <Label layoutX="397.0" layoutY="30.0" text="Telefone" textFill="#47077f" />
+            <Label layoutX="520.0" layoutY="30.0" text="CPF" textFill="#47077f" />
+            <TextField fx:id="searchClient" layoutX="600.0" layoutY="20.0" onKeyTyped="#searchClients" prefHeight="27.0" prefWidth="116.0" promptText="type a CPF client" style="-fx-border-color: #47077F; -fx-background-color: #fffafa; -fx-border-radius: 20;" styleClass="text-input" />
+            <Button fx:id="searchBtn" layoutX="726.0" layoutY="18.0" mnemonicParsing="false" onAction="#searchClient" prefHeight="28.0" prefWidth="41.0" style="-fx-background-color: #47077F; -fx-background-radius: 10;" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="OPEN_HAND" />
+               </cursor>
+               <font>
+                  <Font name="Calibri Bold" size="15.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="21.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icon%20(8).png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
             <ScrollPane hbarPolicy="NEVER" layoutX="24.0" layoutY="56.0" prefHeight="320.0" prefWidth="746.0" stylesheets="@css/styles.css">
                <content>
                   <VBox fx:id="pnItems" prefHeight="318.0" prefWidth="744.0" spacing="5.0" style="-fx-background-color: #fffafa;">
@@ -30,33 +56,6 @@
                   </VBox>
                </content>
             </ScrollPane>
-            <HBox alignment="CENTER_LEFT" layoutX="49.0" layoutY="14.0" prefHeight="42.0" prefWidth="712.0" spacing="80.0" style="-fx-background-color: #fffafa;">
-               <children>
-                  <Label text="Nome Cliente" textFill="#47077f">
-                     <HBox.margin>
-                        <Insets left="50.0" />
-                     </HBox.margin>
-                     <font>
-                        <Font name="Segoe UI Historic" size="12.0" />
-                     </font>
-                  </Label>
-                  <Label text="CPF" textFill="#47077f">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Label>
-                  <Label text="Telefone" textFill="#47077f">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Label>
-                  <Label text="Adress" textFill="#47077f">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Label>
-               </children>
-            </HBox>
          </children>
       </Pane>
       <ImageView fitHeight="184.0" fitWidth="249.0" layoutX="611.0" layoutY="-43.0" pickOnBounds="true" preserveRatio="true">
