--- a/src/main/resources/com/example/sistema_gerenciamentofx/home-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/home-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -130,7 +131,22 @@
             <Pane fx:id="pnlManageOrders" prefHeight="200.0" prefWidth="200.0" />
             <Pane fx:id="pnlOverview" prefHeight="554.0" prefWidth="793.0" style="-fx-background-color: #fffafa;">
                <children>
-                  <TextField fx:id="search_order" layoutX="590.0" layoutY="47.0" prefHeight="27.0" prefWidth="183.0" promptText="Cliente CPF" style="-fx-background-color: #fffafa; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;" />
+                  <TextField fx:id="search_order" layoutX="590.0" layoutY="47.0" onKeyTyped="#searchClients" prefHeight="27.0" prefWidth="143.0" promptText="Cliente CPF" style="-fx-background-color: #fffafa; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;" />
+                  <Button fx:id="searchBtn" layoutX="738.0" layoutY="45.0" mnemonicParsing="false" onAction="#searchClient" prefHeight="18.0" prefWidth="12.0" style="-fx-background-color: #47077F; -fx-background-radius: 10;" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                     <font>
+                        <Font name="Calibri Bold" size="15.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="21.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/icon%20(8).png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                   <Label layoutX="57.0" layoutY="25.0" text="Assistência Técnica" textFill="#47077f">
                      <font>
                         <Font size="24.0" />
@@ -182,7 +198,7 @@
                   </HBox>
                   <HBox alignment="CENTER_LEFT" layoutX="45.0" layoutY="178.0" prefHeight="42.0" prefWidth="712.0" spacing="80.0" style="-fx-background-color: #fffafa;">
                      <children>
-                        <Label text="ID da Ordem" textFill="#47077f">
+                        <Label text="Technician of Order" textFill="#47077f">
                            <HBox.margin>
                               <Insets left="50.0" />
                            </HBox.margin>
@@ -221,11 +237,6 @@
                         </VBox>
                      </content>
                   </ScrollPane>
-                  <ImageView fitHeight="17.0" fitWidth="16.0" layoutX="749.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icon%20(8).png" />
-                     </image>
-                  </ImageView>
                </children>
             </Pane>
             <Pane fx:id="pnlManageTec" prefHeight="200.0" prefWidth="200.0" />
