--- a/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
@@ -28,9 +28,9 @@
                   <Font name="Segoe UI Historic" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="257.0" layoutY="30.0" text="Adress" textFill="#47077f" />
-            <Label layoutX="397.0" layoutY="30.0" text="Telefone" textFill="#47077f" />
-            <Label layoutX="520.0" layoutY="30.0" text="CPF" textFill="#47077f" />
+            <Label layoutX="257.0" layoutY="30.0" prefHeight="17.0" prefWidth="23.0" text="CPF" textFill="#47077f" />
+            <Label layoutX="370.0" layoutY="30.0" prefHeight="17.0" prefWidth="73.0" text="Telefone" textFill="#47077f" />
+            <Label layoutX="482.0" layoutY="30.0" prefHeight="17.0" prefWidth="73.0" text="Adress" textFill="#47077f" />
             <TextField fx:id="searchClient" layoutX="600.0" layoutY="20.0" onKeyTyped="#searchClients" prefHeight="27.0" prefWidth="116.0" promptText="type a CPF client" style="-fx-border-color: #47077F; -fx-background-color: #fffafa; -fx-border-radius: 20;" styleClass="text-input" />
             <Button fx:id="searchBtn" layoutX="726.0" layoutY="18.0" mnemonicParsing="false" onAction="#searchClient" prefHeight="28.0" prefWidth="41.0" style="-fx-background-color: #47077F; -fx-background-radius: 10;" textFill="WHITE">
                <cursor>
